# idea-backup

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: default_types.rs  dir.rs  ensure_7z.rs  extractor.rs  file_walker.rs  gitignore.rs  ignore.rs  main.rs  overrides.rs  pathutil.rs  pattern.rs  types.rs  walk.rs
